deploy/kubesphere.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubesphere-installer
  namespace: kubesphere-system
  labels:
    app: ks-install
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ks-install
  template:
    metadata:
      labels:
        app: ks-install
    spec:
      serviceAccountName: ks-installer
      containers:
      - name: installer
        image: "luoyucumt/shell-operator"
        imagePullPolicy: "Always"
        volumeMounts:
          - name: kubesphere-config
            mountPath: /kubesphere/config
          - name: kubesphere
            mountPath: /etc/kubesphere
      volumes:
        - name: kubesphere-config
          configMap:
            name: ks-installer
        - name: kubesphere
          hostPath:
            path: /etc/kubesphere
            type: DirectoryOrCreate
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - key: CriticalAddonsOnly
          operator: Exists
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-role.kubernetes.io/master
                operator: In
                values:
                - ""
